<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".core.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8EEEC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/register_background"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/top_background2" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/create_account"
                android:textColor="#3b608c"
                android:textSize="40sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="Name"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/name"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColorHint="#756c6c" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="Email"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/email"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColorHint="#756c6c" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="Password"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/password"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHint="#756c6c" />

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="Confirm Password"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/password"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHint="#756c6c" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageButton
                android:id="@+id/img_Reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#F8EEEC"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/btn_register"
                app:srcCompat="@drawable/btn_arrow2" />


            <TextView
                android:id="@+id/tv_go_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/have_account_login_here"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#3B608C"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>