<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".core.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8EEEC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/login_background"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/top_background1" />

            <TextView
                android:id="@+id/welcome_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/welcome_back"
                android:textColor="#EA6D35"
                android:textSize="40sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="Email"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/email"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColorHint="#756c6c" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="Password"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/password"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHint="#756c6c" />


                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageButton
                    android:id="@+id/img_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F8EEEC"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/btn_login"
                    app:srcCompat="@drawable/btn_arrow1" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_facebook"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    app:backgroundTint="@null"
                    android:drawableEnd="@drawable/facebook"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    android:text="@string/facebook"
                    android:textColor="#3b608c"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_google"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:drawableEnd="@drawable/google"
                    app:backgroundTint="@null"
                    android:drawablePadding="16dp"
                    android:padding="16dp"
                    android:text="@string/google"
                    android:textColor="#3b608c"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_go_register"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/are_you_new_register"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#3B608C"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>